buildscript {
	ext {
		springBootVersion = '2.2.7.RELEASE'
	}
	repositories {
		mavenCentral()
	}
	dependencies {
		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
		classpath "org.postgresql:postgresql:42.2.5"
	}
}

plugins {
	id "org.flywaydb.flyway" version "6.4.1"
	id "io.freefair.lombok" version "5.0.1"
}

apply plugin: 'java'
apply plugin: 'org.springframework.boot'
apply plugin: 'io.spring.dependency-management'



group = 'com.pozpl'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '1.8'

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	

	implementation group: 'io.vavr', name: 'vavr', version: '0.10.2'
	implementation group: 'io.vavr', name: 'vavr-match', version: '0.10.2'
	implementation group: 'io.vavr', name: 'vavr-match-processor', version: '0.10.2'

	implementation group: 'commons-codec', name: 'commons-codec', version: '1.13'
	implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.10'

	implementation 'edu.stanford.nlp:stanford-corenlp:4.0.0'


	implementation(project(':frontend'))
	runtimeOnly 'org.springframework.boot:spring-boot-devtools'
	runtimeOnly 'com.h2database:h2'
	implementation group: 'org.postgresql', name: 'postgresql', version: '42.2.5'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
}


//jar {
//	from('frontend/dist') {
//		Public is a default supported Spring Boot resources directory.
//		into 'public'
//	}
//}

//frontend:build will be run before the processResources
//processResources.dependsOn('frontend:npmbuild')

//bootJar {
//	dependsOn ':frontend:npmbuild'
//
//	into('BOOT-INF/classes/static') {
//		from "${project(':frontend').projectDir}/dist"
//	}
//}


flyway {
	url = 'jdbc:postgresql://localhost:5432/ner'
	user = 'ner_user'
//	password = 'mySecretPwd'
}


//------------------------------------------------------------------------------------------------------------------------
//    Tasks - Standalone backend
//------------------------------------------------------------------------------------------------------------------------

task bootStandaloneBackend {
	group 'application'
	dependsOn bootRun
}

jar.dependsOn  ':buildJsAndCopyToSpring'


//------------------------------------------------------------------------------------------------------------------------
//    Tasks - Application
//------------------------------------------------------------------------------------------------------------------------

task copyCompiledJs(type: Copy) {
	group 'application'
	from "${project(':frontend').projectDir}/dist/frontend"
	into "${rootDir}/src/main/resources/static"
}

task buildJsAndCopyToSpring(type: GradleBuild){
	group 'application'
	setTasks([':frontend:buildClientToSpring', ':copyCompiledJs'])
}

task bootFullApplication(type: GradleBuild) {
	group 'application'
	setTasks([':frontend:npmUpdate', ':frontend:clean', ':buildJsAndCopyToSpring', ':bootRun'])
}